# UR_Grasp_Driver

./: .gitignore  README.md
yc_ws/: .TimeRecord
yc_ws/install/: local_setup.sh  setup.sh
yc_ws/install/app/lib/app/: coordinator  grasp_detection
yc_ws/install/app/share/app/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
yc_ws/install/app2/lib/app/: coordinator2  grasp_detector_controller  gripper_controller  robot_controller_moveit  robot_controller_rtde
yc_ws/install/app2/share/app2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
yc_ws/install/my_pkg/lib/my_pkg/: move_robot  realsense_subscriber.py
yc_ws/install/my_pkg/share/my_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.ps1  package.sh  package.xml  package.zsh
yc_ws/install/my_ur_driver/share/my_ur_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.ps1  package.sh
yc_ws/install/robotiq_controllers/share/robotiq_controllers/: controller_plugins.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
yc_ws/install/robotiq_description/share/robotiq_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh
yc_ws/install/robotiq_driver/include/robotiq_driver/: data_utils.hpp  default_driver_factory.hpp  driver.hpp  driver_exception.hpp  hardware_interface.hpp  serial.hpp  serial_factory.hpp  visibility_control.hpp
yc_ws/install/robotiq_driver/share/robotiq_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh
yc_ws/install/robotiq_hardware_tests/share/robotiq_hardware_tests/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh
yc_ws/install/serial/include/serial/: serial.h
yc_ws/install/serial/share/serial/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh
yc_ws/install/ur_calibration/include/ur_calibration/: calibration_consumer.hpp
yc_ws/install/ur_calibration/lib/ur_calibration/: calibration_correction
yc_ws/install/ur_calibration/share/ur_calibration/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
yc_ws/log/: latest_build
yc_ws/src/: Commands  Commands.md
yc_ws/src/app/: package.xml  setup.py
yc_ws/src/app/app/: __init__.py  camera_interface.py  camera_interface_controller.py  coordinator.py  grasp_detection.py  grasp_detection_controller.py
yc_ws/src/app/app/license/: AbdelrahmanAlordy.lic  AbdelrahmanAlordy.public_key  AbdelrahmanAlordy.signature  licenseCfg.json
yc_ws/src/app/launch/: coordinator_launch.py
yc_ws/src/app2/: package.xml  setup.py
yc_ws/src/app2/app2/: __init__.py  coordinator2.py  frames_2024-11-12_16.35.51.gv  gripper_controller.py  robot_controller_moveit.py  robot_controller_rtde.py  try.py
yc_ws/src/app2/launch/: coordinator_launch.py
yc_ws/src/data/: frames_2024-10-24_16.45.02.gv  poses.json
yc_ws/src/find_grasp/: CMakeLists.txt  package.xml  setup.py
yc_ws/src/find_grasp/find_grasp/: .TimeRecord  inference.py  readMe.md
yc_ws/src/find_grasp/find_grasp/utils/: data_utils.py  label_generation.py
yc_ws/src/find_grasp/find_grasp/visual/: T_SNE.py  vis_affordances.py  vis_ap_scale.py  vis_attention_map.py  vis_calibration.py  vis_gripper.py  vis_ground_poses.py  vis_point_query.py  vis_poses.py  (+1 more)
yc_ws/src/find_grasp/launch/: coordinator_launch.py
yc_ws/src/frames/: CMakeLists.txt  package.xml  setup.py
yc_ws/src/frames/frames/: __init__.py  camera_controller.py  grasp_detector_controller.py
yc_ws/src/frames/launch/: coordinator_launch.py
yc_ws/src/gripper/: frames_2024-11-14_15.28.50.gv
yc_ws/src/install/: local_setup.sh  setup.sh
yc_ws/src/log/: latest_build
yc_ws/src/my_pkg/: CMakeLists.txt  setup.py
yc_ws/src/my_pkg/scripts/calibration/: 00p_calib_step_01.py  calibration.py  myfileorganiser.py  myframe.py  try.py
yc_ws/src/my_pkg/scripts/calibration/data/20241007_184458H/: poses.json  results.json
yc_ws/src/my_pkg/scripts/calibration/data/images/: poses.json  results.json
yc_ws/src/my_pkg/scripts/calibration/files/: generated_poses.json  poses.json
yc_ws/src/my_pkg/scripts/calibration/files/poses/: poses.json  results.json
yc_ws/src/my_pkg/scripts/mine/: 02RECORD.py  RECORD.py  realsense_subscriber.py  transformation.py
yc_ws/src/my_pkg/src/: move_robot.cpp
yc_ws/src/my_pkg/src/coordinator/: camera_interface.py  camera_interface_controller.py
yc_ws/src/my_ur_driver/: CMakeLists.txt  package.xml  setup.py
yc_ws/src/my_ur_driver/Realsense Calibration Data/: results.json
yc_ws/src/my_ur_driver/launch/: my_camera.launch.py  my_moveit.launch.py  my_ur.launch.py
yc_ws/src/my_ur_driver/my_libs/: mycamera.py
yc_ws/src/my_ur_driver/my_moveit_config/moveit_controllers/: moveit_controllers.yaml
yc_ws/src/my_ur_driver/my_moveit_config/srdf/: my_world.macro.srdf.xacro  my_world.srdf.xacro
yc_ws/src/my_ur_driver/my_ur_config/ur_controllers/: ur_calibration.yaml  ur_controllers.yaml
yc_ws/src/my_ur_driver/my_ur_config/urdf/: my_world.urdf.xacro  original.urdf.xacro
yc_ws/src/my_ur_driver/my_ur_config/urdf/gripper/: robotiq_2f_140.xacro  robotiq_2f_140_gripper.urdf.xacro  robotiq_2f_140_macro.urdf.xacro  ur_to_robotiq_adapter.urdf.xacro
yc_ws/src/my_ur_driver/my_ur_config/urdf/meshes/camera/: abdo.mlp  abdo_camera.stl
yc_ws/src/ur_calibration/: CMakeLists.txt
(+455 files in other folders)
